{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 219,
  "lineage": "849ff585-b389-ca33-1193-0055cdf27018",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "backend_bootstorage_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-15T07:26:06.336-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2425-website-g09/global/firewalls/backend-bootstorage",
            "log_config": [],
            "name": "backend-bootstorage",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
            "priority": 1000,
            "project": "agisit-2425-website-g09",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/firewalls/backend-bootstorage",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bootstorage"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "backend_expressed_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-14T07:03:05.517-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2425-website-g09/global/firewalls/backend-expressed",
            "log_config": [],
            "name": "backend-expressed",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
            "priority": 1000,
            "project": "agisit-2425-website-g09",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/firewalls/backend-expressed",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "expressed"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "backend_happy_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-14T07:17:26.784-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2425-website-g09/global/firewalls/backend-happy",
            "log_config": [],
            "name": "backend-happy",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
            "priority": 1000,
            "project": "agisit-2425-website-g09",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/firewalls/backend-happy",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "happy"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "frontend_8080_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-16T10:49:21.896-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2425-website-g09/global/firewalls/frontend-8080",
            "log_config": [],
            "name": "frontend-8080",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
            "priority": 1000,
            "project": "agisit-2425-website-g09",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/firewalls/frontend-8080",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "balancer"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "frontend_80_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-16T10:49:21.898-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2425-website-g09/global/firewalls/frontend-80",
            "log_config": [],
            "name": "frontend-80",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
            "priority": 1000,
            "project": "agisit-2425-website-g09",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/firewalls/frontend-80",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "balancer"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "frontend_vuecalc_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-14T07:03:05.886-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2425-website-g09/global/firewalls/frontend-vuecalc",
            "log_config": [],
            "name": "frontend-vuecalc",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
            "priority": 1000,
            "project": "agisit-2425-website-g09",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/firewalls/frontend-vuecalc",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "vuecalc"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mongodb_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-15T07:26:06.021-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2425-website-g09/global/firewalls/mongodb-access",
            "log_config": [],
            "name": "mongodb-access",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
            "priority": 1000,
            "project": "agisit-2425-website-g09",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/firewalls/mongodb-access",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mongodb"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "prometheus_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9090"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-18T07:56:28.579-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2425-website-g09/global/firewalls/prometheus-access",
            "log_config": [],
            "name": "prometheus-access",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
            "priority": 1000,
            "project": "agisit-2425-website-g09",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/firewalls/prometheus-access",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "prometheus"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/disks/balancer"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-g09/zones/europe-central2-a/instances/balancer",
            "instance_id": "5204511479711660045",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWsax85DMwLxWUeRPq+eWAaTumjS1LLXYktomnMjORHjDzx+D/BuSUG4wk+9vJLtcYonMjse1tC41L3SWORHdh8Sd4/BvyKZURPjo8xUOqwzOSdNZNUCOG0GJ6E2wAj+QHNtyBuhe5SekLGAHo8gxBI6mvPWCI/X7/YsZR19wS23rP7kuVTwE5XPYXHjK6jHPT/gj59OQg7O2zT7bA1WDL5jE6uMw/dvjBiWn7riiQMjDXKHTrt/F5fXKGRYRbpqMFoczFUF5fD6eGvhZyYvhP7PXYfdU+Z7gHZbG48bb/G5quQ62ZKc2tWhxWkij6qKLOB50HgAGT7mOzGtGChOyZ vagrant@mgmt\n"
            },
            "metadata_fingerprint": "9lLM6Irfv2w=",
            "name": "balancer",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.237.107",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
                "network_ip": "10.186.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/regions/europe-central2/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-g09"
              }
            ],
            "project": "agisit-2425-website-g09",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/instances/balancer",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "balancer"
            ],
            "tags_fingerprint": "7RIB79AHyl4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-central2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bootstorage",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/disks/bootstorage-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-g09/zones/europe-central2-a/instances/bootstorage-1",
            "instance_id": "452187762200237220",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWsax85DMwLxWUeRPq+eWAaTumjS1LLXYktomnMjORHjDzx+D/BuSUG4wk+9vJLtcYonMjse1tC41L3SWORHdh8Sd4/BvyKZURPjo8xUOqwzOSdNZNUCOG0GJ6E2wAj+QHNtyBuhe5SekLGAHo8gxBI6mvPWCI/X7/YsZR19wS23rP7kuVTwE5XPYXHjK6jHPT/gj59OQg7O2zT7bA1WDL5jE6uMw/dvjBiWn7riiQMjDXKHTrt/F5fXKGRYRbpqMFoczFUF5fD6eGvhZyYvhP7PXYfdU+Z7gHZbG48bb/G5quQ62ZKc2tWhxWkij6qKLOB50HgAGT7mOzGtGChOyZ vagrant@mgmt\n"
            },
            "metadata_fingerprint": "9lLM6Irfv2w=",
            "name": "bootstorage-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.169.114",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
                "network_ip": "10.186.0.21",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/regions/europe-central2/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-g09"
              }
            ],
            "project": "agisit-2425-website-g09",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/instances/bootstorage-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bootstorage"
            ],
            "tags_fingerprint": "wgXf_SnZNKI=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-central2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-west1-d/disks/bootstorage-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-g09/zones/europe-west1-d/instances/bootstorage-2",
            "instance_id": "5803187791440991480",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWsax85DMwLxWUeRPq+eWAaTumjS1LLXYktomnMjORHjDzx+D/BuSUG4wk+9vJLtcYonMjse1tC41L3SWORHdh8Sd4/BvyKZURPjo8xUOqwzOSdNZNUCOG0GJ6E2wAj+QHNtyBuhe5SekLGAHo8gxBI6mvPWCI/X7/YsZR19wS23rP7kuVTwE5XPYXHjK6jHPT/gj59OQg7O2zT7bA1WDL5jE6uMw/dvjBiWn7riiQMjDXKHTrt/F5fXKGRYRbpqMFoczFUF5fD6eGvhZyYvhP7PXYfdU+Z7gHZbG48bb/G5quQ62ZKc2tWhxWkij6qKLOB50HgAGT7mOzGtGChOyZ vagrant@mgmt\n"
            },
            "metadata_fingerprint": "9lLM6Irfv2w=",
            "name": "bootstorage-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.205.131.106",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
                "network_ip": "10.132.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-g09"
              }
            ],
            "project": "agisit-2425-website-g09",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-west1-d/instances/bootstorage-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bootstorage"
            ],
            "tags_fingerprint": "wgXf_SnZNKI=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-d"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "expressed",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/disks/expressed1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-g09/zones/europe-central2-a/instances/expressed1",
            "instance_id": "3466269697406704244",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWsax85DMwLxWUeRPq+eWAaTumjS1LLXYktomnMjORHjDzx+D/BuSUG4wk+9vJLtcYonMjse1tC41L3SWORHdh8Sd4/BvyKZURPjo8xUOqwzOSdNZNUCOG0GJ6E2wAj+QHNtyBuhe5SekLGAHo8gxBI6mvPWCI/X7/YsZR19wS23rP7kuVTwE5XPYXHjK6jHPT/gj59OQg7O2zT7bA1WDL5jE6uMw/dvjBiWn7riiQMjDXKHTrt/F5fXKGRYRbpqMFoczFUF5fD6eGvhZyYvhP7PXYfdU+Z7gHZbG48bb/G5quQ62ZKc2tWhxWkij6qKLOB50HgAGT7mOzGtGChOyZ vagrant@mgmt\n"
            },
            "metadata_fingerprint": "9lLM6Irfv2w=",
            "name": "expressed1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.197.119",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
                "network_ip": "10.186.0.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/regions/europe-central2/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-g09"
              }
            ],
            "project": "agisit-2425-website-g09",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/instances/expressed1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "expressed"
            ],
            "tags_fingerprint": "jQIIQ8zwvwg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-central2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/disks/expressed2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-g09/zones/europe-central2-a/instances/expressed2",
            "instance_id": "2889187806932929517",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWsax85DMwLxWUeRPq+eWAaTumjS1LLXYktomnMjORHjDzx+D/BuSUG4wk+9vJLtcYonMjse1tC41L3SWORHdh8Sd4/BvyKZURPjo8xUOqwzOSdNZNUCOG0GJ6E2wAj+QHNtyBuhe5SekLGAHo8gxBI6mvPWCI/X7/YsZR19wS23rP7kuVTwE5XPYXHjK6jHPT/gj59OQg7O2zT7bA1WDL5jE6uMw/dvjBiWn7riiQMjDXKHTrt/F5fXKGRYRbpqMFoczFUF5fD6eGvhZyYvhP7PXYfdU+Z7gHZbG48bb/G5quQ62ZKc2tWhxWkij6qKLOB50HgAGT7mOzGtGChOyZ vagrant@mgmt\n"
            },
            "metadata_fingerprint": "9lLM6Irfv2w=",
            "name": "expressed2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.154.164",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
                "network_ip": "10.186.0.13",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/regions/europe-central2/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-g09"
              }
            ],
            "project": "agisit-2425-website-g09",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/instances/expressed2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "expressed"
            ],
            "tags_fingerprint": "jQIIQ8zwvwg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-central2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "happy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/disks/happy1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-g09/zones/europe-central2-a/instances/happy1",
            "instance_id": "1792501335629797655",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWsax85DMwLxWUeRPq+eWAaTumjS1LLXYktomnMjORHjDzx+D/BuSUG4wk+9vJLtcYonMjse1tC41L3SWORHdh8Sd4/BvyKZURPjo8xUOqwzOSdNZNUCOG0GJ6E2wAj+QHNtyBuhe5SekLGAHo8gxBI6mvPWCI/X7/YsZR19wS23rP7kuVTwE5XPYXHjK6jHPT/gj59OQg7O2zT7bA1WDL5jE6uMw/dvjBiWn7riiQMjDXKHTrt/F5fXKGRYRbpqMFoczFUF5fD6eGvhZyYvhP7PXYfdU+Z7gHZbG48bb/G5quQ62ZKc2tWhxWkij6qKLOB50HgAGT7mOzGtGChOyZ vagrant@mgmt\n"
            },
            "metadata_fingerprint": "9lLM6Irfv2w=",
            "name": "happy1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.135.155",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
                "network_ip": "10.186.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/regions/europe-central2/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-g09"
              }
            ],
            "project": "agisit-2425-website-g09",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/instances/happy1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "happy"
            ],
            "tags_fingerprint": "KMIjEaMtAkE=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-central2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/disks/happy2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-g09/zones/europe-central2-a/instances/happy2",
            "instance_id": "439449280040700906",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWsax85DMwLxWUeRPq+eWAaTumjS1LLXYktomnMjORHjDzx+D/BuSUG4wk+9vJLtcYonMjse1tC41L3SWORHdh8Sd4/BvyKZURPjo8xUOqwzOSdNZNUCOG0GJ6E2wAj+QHNtyBuhe5SekLGAHo8gxBI6mvPWCI/X7/YsZR19wS23rP7kuVTwE5XPYXHjK6jHPT/gj59OQg7O2zT7bA1WDL5jE6uMw/dvjBiWn7riiQMjDXKHTrt/F5fXKGRYRbpqMFoczFUF5fD6eGvhZyYvhP7PXYfdU+Z7gHZbG48bb/G5quQ62ZKc2tWhxWkij6qKLOB50HgAGT7mOzGtGChOyZ vagrant@mgmt\n"
            },
            "metadata_fingerprint": "9lLM6Irfv2w=",
            "name": "happy2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.228.65",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
                "network_ip": "10.186.0.16",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/regions/europe-central2/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-g09"
              }
            ],
            "project": "agisit-2425-website-g09",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/instances/happy2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "happy"
            ],
            "tags_fingerprint": "KMIjEaMtAkE=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-central2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/disks/mongodb"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-g09/zones/europe-central2-a/instances/mongodb",
            "instance_id": "8841178083007644270",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWsax85DMwLxWUeRPq+eWAaTumjS1LLXYktomnMjORHjDzx+D/BuSUG4wk+9vJLtcYonMjse1tC41L3SWORHdh8Sd4/BvyKZURPjo8xUOqwzOSdNZNUCOG0GJ6E2wAj+QHNtyBuhe5SekLGAHo8gxBI6mvPWCI/X7/YsZR19wS23rP7kuVTwE5XPYXHjK6jHPT/gj59OQg7O2zT7bA1WDL5jE6uMw/dvjBiWn7riiQMjDXKHTrt/F5fXKGRYRbpqMFoczFUF5fD6eGvhZyYvhP7PXYfdU+Z7gHZbG48bb/G5quQ62ZKc2tWhxWkij6qKLOB50HgAGT7mOzGtGChOyZ vagrant@mgmt\n"
            },
            "metadata_fingerprint": "9lLM6Irfv2w=",
            "name": "mongodb",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.196.45",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
                "network_ip": "10.186.0.17",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/regions/europe-central2/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-g09"
              }
            ],
            "project": "agisit-2425-website-g09",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/instances/mongodb",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "mongodb"
            ],
            "tags_fingerprint": "unDUUT8-8-A=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-central2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-west1-d/disks/prometheus"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-g09/zones/europe-west1-d/instances/prometheus",
            "instance_id": "7636335801093047535",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWsax85DMwLxWUeRPq+eWAaTumjS1LLXYktomnMjORHjDzx+D/BuSUG4wk+9vJLtcYonMjse1tC41L3SWORHdh8Sd4/BvyKZURPjo8xUOqwzOSdNZNUCOG0GJ6E2wAj+QHNtyBuhe5SekLGAHo8gxBI6mvPWCI/X7/YsZR19wS23rP7kuVTwE5XPYXHjK6jHPT/gj59OQg7O2zT7bA1WDL5jE6uMw/dvjBiWn7riiQMjDXKHTrt/F5fXKGRYRbpqMFoczFUF5fD6eGvhZyYvhP7PXYfdU+Z7gHZbG48bb/G5quQ62ZKc2tWhxWkij6qKLOB50HgAGT7mOzGtGChOyZ vagrant@mgmt\n"
            },
            "metadata_fingerprint": "9lLM6Irfv2w=",
            "name": "prometheus",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.190.192.52",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
                "network_ip": "10.132.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-g09"
              }
            ],
            "project": "agisit-2425-website-g09",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-west1-d/instances/prometheus",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "prometheus"
            ],
            "tags_fingerprint": "GgCvTFRMhvU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-d"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vuecalc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/disks/vuecalc1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-g09/zones/europe-central2-a/instances/vuecalc1",
            "instance_id": "8862418620431988749",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWsax85DMwLxWUeRPq+eWAaTumjS1LLXYktomnMjORHjDzx+D/BuSUG4wk+9vJLtcYonMjse1tC41L3SWORHdh8Sd4/BvyKZURPjo8xUOqwzOSdNZNUCOG0GJ6E2wAj+QHNtyBuhe5SekLGAHo8gxBI6mvPWCI/X7/YsZR19wS23rP7kuVTwE5XPYXHjK6jHPT/gj59OQg7O2zT7bA1WDL5jE6uMw/dvjBiWn7riiQMjDXKHTrt/F5fXKGRYRbpqMFoczFUF5fD6eGvhZyYvhP7PXYfdU+Z7gHZbG48bb/G5quQ62ZKc2tWhxWkij6qKLOB50HgAGT7mOzGtGChOyZ vagrant@mgmt\n"
            },
            "metadata_fingerprint": "9lLM6Irfv2w=",
            "name": "vuecalc1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.255.30",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/global/networks/default",
                "network_ip": "10.186.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/regions/europe-central2/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-g09"
              }
            ],
            "project": "agisit-2425-website-g09",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-g09/zones/europe-central2-a/instances/vuecalc1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "vuecalc"
            ],
            "tags_fingerprint": "upvbUM-JrhE=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-central2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    }
  ]
}